fix for the homepage bg not showing on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ a {
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
     background-image: url("../images/boba-home.png");
     height: 500px;
 }
